update all files

--- a/simple-store-frontend/src/app/review.component.html
+++ b/simple-store-frontend/src/app/review.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5" *ngIf="product">
   <h2 class="text-center mb-4"> Look Over Your Order! </h2>
-  <div class="card mx-auto" style="max-width: 400px;">
+  <div class="card mx-auto custom-card">
     <img [src]="product.image" class="card-img-top" alt="{{ product.name }}">
     <div class="card-body text-center">
       <h5 class="card-title">{{ product.name }}</h5>
